--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello WOrld!</h1>
+    <div class="nav-bar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="second_page.html">Second Page</a></li>
+          </ul>
+    </div>
+
+    <h1>HELLO WORLD!!</h1>
 </body>
 </html>
