change some css

--- a/second_page.html
+++ b/second_page.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="never_gonna_give_you_up">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xm3YgoEiEDc?si=kaCiIJVLtoQ5DtgY" title="..." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xm3YgoEiEDc?si=kaCiIJVLtoQ5DtgY" title="" frameborder="20px" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 </body>
 </html>
